infra/timeweb/10-gitops/apps/monitoring/grafana/grafana.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "24"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`monitoring.archpad.pro`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
  tls:
    secretName: wildcard-archpad-pro-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-http
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "24"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`monitoring.archpad.pro`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
      middlewares:
        - name: redirect-to-https
          namespace: traefik
